--- a/package.json
+++ b/package.json
@@ -2,5 +2,37 @@
   "name": "@fastly/next-compute-js",
   "version": "0.1.0",
   "license": "MIT",
-  "description": "Next.js for Fastly Compute@Edge"
+  "description": "Next.js for Fastly Compute@Edge",
+  "main": "./build/src/index.js",
+  "types": "./build/src/index.d.ts",
+  "scripts": {
+    "prepack": "yarn clean && yarn test && yarn compile",
+    "compile": "tsc --build tsconfig.json",
+    "clean": "tsc --build --clean tsconfig.json",
+    "test": "nyc ts-mocha -p tsconfig.json --require test/mocha_bootstrap.js test/testHelpers.ts test/**/*.test.ts"
+  },
+  "dependencies": {
+    "node-inspect-extracted": "^1.1.0"
+  },
+  "devDependencies": {
+    "@fastly/js-compute": "^0.3.0",
+    "@types/assert": "^1.5.6",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.6",
+    "@types/sinon": "^10.0.13",
+    "assert": "^2.0.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.7.4"
+  },
+  "files": [
+    "build/src/**/*.js",
+    "build/src/**/*.js.map",
+    "build/src/**/*.d.ts",
+    "LICENSE",
+    "README.md",
+    "SECURITY.md"
+  ]
 }
