ComputeJs Next Server

--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "test": "nyc ts-mocha -p tsconfig.json --require test/mocha_bootstrap.js test/testHelpers.ts test/**/*.test.ts"
   },
   "dependencies": {
+    "next": "12.2.2",
     "node-inspect-extracted": "^1.1.0"
   },
   "devDependencies": {
     "@fastly/js-compute": "^0.3.0",
     "@types/assert": "^1.5.6",
+    "@types/fresh": "^0.5.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.6",
     "@types/sinon": "^10.0.13",
     "assert": "^2.0.0",
+    "fresh": "^0.5.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "sinon": "^14.0.0",
