--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "arg": "^5.0.2",
+    "chalk": "^5.0.1",
     "next": "12.2.2",
     "node-inspect-extracted": "^1.1.0"
   },
