--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "clean": "rm -rf build",
     "test": "nyc ts-mocha -p tsconfig.json --require test/mocha_bootstrap.js test/testHelpers.ts test/**/*.test.ts"
   },
+  "peerDependencies": {
+    "react": "^17.0.2 || ^18.0.0-0",
+    "react-dom": "^17.0.2 || ^18.0.0-0",
+    "next": "12.2.2"
+  },
   "dependencies": {
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "fresh": "^0.5.2",
-    "next": "12.2.2",
     "node-inspect-extracted": "^1.1.0"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/sinon": "^10.0.13",
     "assert": "^2.0.0",
     "mocha": "^10.0.0",
+    "next": "12.2.2",
     "nyc": "^15.1.0",
     "sinon": "^14.0.0",
     "ts-mocha": "^10.0.0",
