--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
+    "etag": "^1.8.1",
     "fresh": "^0.5.2",
     "node-inspect-extracted": "^1.1.0"
   },
   "devDependencies": {
     "@fastly/js-compute": "^0.3.0",
     "@types/assert": "^1.5.6",
+    "@types/etag": "^1.8.1",
     "@types/fresh": "^0.5.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.6",
