--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "peerDependencies": {
     "next": "12.2.2",
-    "react": "^17.0.2 || ^18.0.0-0",
-    "react-dom": "^17.0.2 || ^18.0.0-0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "arg": "^5.0.2",
