--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@fastly/http-compute-js": "^0.1.0-alpha.5",
     "arg": "^5.0.2",
+    "bytes": "^3.1.2",
     "chalk": "^4.1.2",
+    "cookie": "^0.5.0",
     "fresh": "^0.5.2",
+    "jsonwebtoken": "^8.5.1",
     "node-inspect-extracted": "^1.1.0"
   },
   "devDependencies": {
     "@fastly/js-compute": "^0.3.0",
     "@types/assert": "^1.5.6",
+    "@types/bytes": "^3.1.1",
+    "@types/cookie": "^0.5.1",
     "@types/fresh": "^0.5.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.6",
     "@types/sinon": "^10.0.13",
