--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastly/next-compute-js",
-  "version": "0.1.0-alpha.27",
+  "version": "0.1.0-alpha.28",
   "license": "MIT",
   "description": "Next.js for Fastly Compute@Edge",
   "main": "./build/src/index.js",
@@ -24,15 +24,18 @@
     "arg": "^5.0.2",
     "bytes": "^3.1.2",
     "chalk": "^4.1.2",
+    "content-type": "^1.0.4",
     "cookie": "^0.5.0",
     "fresh": "^0.5.2",
     "jsonwebtoken": "^8.5.1",
-    "node-inspect-extracted": "^1.1.0"
+    "node-inspect-extracted": "^1.1.0",
+    "raw-body": "^2.5.1"
   },
   "devDependencies": {
     "@fastly/js-compute": "^0.3.0",
     "@types/assert": "^1.5.6",
     "@types/bytes": "^3.1.1",
+    "@types/content-type": "^1.1.5",
     "@types/cookie": "^0.5.1",
     "@types/fresh": "^0.5.0",
     "@types/jsonwebtoken": "^8.5.8",
