--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "arg": "^5.0.2",
     "bytes": "^3.1.2",
     "chalk": "^4.1.2",
+    "compression": "^1.7.4",
     "content-type": "^1.0.4",
     "cookie": "^0.5.0",
     "fresh": "^0.5.2",
@@ -35,6 +36,7 @@
     "@fastly/js-compute": "^0.3.0",
     "@types/assert": "^1.5.6",
     "@types/bytes": "^3.1.1",
+    "@types/compression": "^1.7.2",
     "@types/content-type": "^1.1.5",
     "@types/cookie": "^0.5.1",
     "@types/fresh": "^0.5.0",
