--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "peerDependencies": {
     "next": "12.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2 || ^18.0.0-0",
+    "react-dom": "^17.0.2 || ^18.0.0-0"
   },
   "dependencies": {
-    "@fastly/http-compute-js": "^0.1.0-alpha.15",
+    "@fastly/http-compute-js": "^0.1.0-beta.1",
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
