--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "test": "nyc ts-mocha -p tsconfig.json --require test/mocha_bootstrap.js test/testHelpers.ts test/**/*.test.ts"
   },
   "peerDependencies": {
-    "next": "^12.2.2",
+    "next": "12.2.2",
     "react": "^17.0.2 || ^18.0.0-0",
     "react-dom": "^17.0.2 || ^18.0.0-0"
   },
   "dependencies": {
-    "@fastly/http-compute-js": "^0.1.0-beta.1",
+    "@fastly/http-compute-js": "^0.1.0-beta.2",
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
