--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2 || ^18.0.0-0"
   },
   "dependencies": {
-    "@fastly/http-compute-js": "^0.1.0-beta.2",
+    "@fastly/http-compute-js": "^0.1.0",
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
