--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastly/next-compute-js",
-  "version": "0.2.0-beta.0",
+  "version": "0.2.0",
   "license": "MIT",
   "description": "Next.js for Fastly Compute@Edge",
   "main": "./build/src/index.js",
@@ -28,7 +28,7 @@
     "raw-body": "^2.5.1"
   },
   "devDependencies": {
-    "@fastly/js-compute": "^0.3.0",
+    "@fastly/js-compute": "^0.4.0",
     "@types/assert": "^1.5.6",
     "@types/compression": "^1.7.2",
     "@types/mocha": "^9.1.1",
