--- a/examples/my-app/package.json
+++ b/examples/my-app/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.2",
-    "@next/mdx": "^12.2.3",
-    "next": "12.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@next/mdx": "^12.2.4",
+    "next": "^12.2.4",
+    "react": "^18",
+    "react-dom": "^18",
     "swr": "^1.3.0"
   },
   "devDependencies": {
