--- a/resources/compute-js/package.json
+++ b/resources/compute-js/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "js-compute-runtime bin/index.js bin/main.wasm",
         "deploy": "npm run build && fastly compute deploy",
-        "prebuild": "npx @fastly/compute-js-static-publish --build-static && webpack"
+        "prebuild": "npx check-next-version && npx @fastly/compute-js-static-publish --build-static && webpack"
     },
     "dependencies": {
         "@fastly/js-compute": "^0.4.0",
@@ -14,7 +14,7 @@
     },
     "devDependencies": {
         "@fastly/compute-js-static-publish": "^2.0.0",
-        "@fastly/next-compute-js": "^0.2.0",
+        "@fastly/next-compute-js": "^0.2.3",
         "assert": "^2.0.0",
         "browserify-zlib": "^0.2.0",
         "buffer": "^6.0.3",
