--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "node-inspect-extracted": "^1.1.0",
+    "nunjucks": "^3.2.3",
     "pkg-up": "^3.1.0",
     "raw-body": "^2.5.1"
   },
@@ -35,6 +36,7 @@
     "@types/compression": "^1.7.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.6",
+    "@types/nunjucks": "^3.2.1",
     "@types/sinon": "^10.0.13",
     "assert": "^2.0.0",
     "mocha": "^10.0.0",
