--- a/package.json
+++ b/package.json
@@ -1,56 +1,41 @@
 {
   "name": "@fastly/next-compute-js",
-  "version": "0.9.0",
+  "version": "2.0.0-alpha.10",
   "license": "MIT",
   "description": "Next.js for Fastly Compute@Edge",
-  "main": "./build/src/index.js",
-  "types": "./build/src/index.d.ts",
-  "bin": {
-    "next-compute-js": "./build/src/bin/next-compute-js.js",
-    "check-next-version": "./build/src/bin/check-next-version.js"
-  },
+  "type": "module",
+  "bin": "./dist/node/cli/index.js",
   "scripts": {
-    "prepack": "yarn clean && yarn test && yarn compile",
-    "compile": "tsc --build tsconfig.json",
-    "clean": "rm -rf build",
-    "test": "nyc ts-mocha -p tsconfig.json --require test/mocha_bootstrap.js test/testHelpers.ts test/**/*.test.ts"
+    "prepack": "npm run clean && npm run test && npm run build",
+    "build": "tsc --build tsconfig.json",
+    "clean": "rm -rf dist",
+    "test": "c8 mocha -n no-warnings=86652 -n loader=ts-node/esm --extension ts --require ./src/test/mocha_bootstrap.js ./src/test/testHelpers.ts ./src/test/**/*.test.ts"
   },
-  "peerDependencies": {
-    "next": "12.3.0",
-    "react": "^17.0.2 || ^18.0.0-0",
-    "react-dom": "^17.0.2 || ^18.0.0-0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fastly/next-compute-js.git"
   },
   "dependencies": {
-    "@fastly/http-compute-js": "^0.3.2",
-    "accepts": "^1.3.8",
-    "arg": "^5.0.2",
-    "chalk": "^4.1.2",
-    "compression": "^1.7.4",
-    "nunjucks": "^3.2.3",
-    "pkg-up": "^3.1.0",
-    "raw-body": "^2.5.1"
+    "command-line-args": "^5.2.1",
+    "nunjucks": "^3.2.4"
   },
   "devDependencies": {
-    "@fastly/js-compute": "^1.0.0",
-    "@types/accepts": "^1.3.5",
-    "@types/assert": "^1.5.6",
-    "@types/compression": "^1.7.2",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.6",
-    "@types/nunjucks": "^3.2.1",
-    "@types/sinon": "^10.0.13",
+    "@types/command-line-args": "^5.2.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.16.13",
+    "@types/nunjucks": "^3.2.2",
+    "@types/sinon": "^10.0.15",
     "assert": "^2.0.0",
+    "c8": "^7.13.0",
     "mocha": "^10.2.0",
-    "next": "12.3.0",
-    "nyc": "^15.1.0",
-    "sinon": "^14.0.0",
-    "ts-mocha": "^10.0.0",
-    "typescript": "^4.7.4"
+    "sinon": "^15.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "files": [
-    "build/src/**/*.js",
-    "build/src/**/*.js.map",
-    "build/src/**/*.d.ts",
+    "dist/**/*.js",
+    "dist/**/*.js.map",
+    "dist/**/*.d.ts",
     "resources/**/*",
     "LICENSE",
     "README.md",
