--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,23 @@
 {
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "composite": true,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "incremental": true,
-    "inlineSources": true,
-    "module": "commonjs",
+    "module": "es2022",
+    "moduleResolution": "node",
     "newLine": "LF",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
     "pretty": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "strictNullChecks": true,
-    "target": "es2018",
-    "lib": [ "es2018" ],
-    "useUnknownInCatchVariables": false,
-    "rootDir": ".",
-    "outDir": "build"
+    "target": "es2022",
+    "lib": [ "es2022" ],
+    "rootDir": "src",
+    "outDir": "dist"
   },
   "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
