--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
+    "@fastly/js-compute": "^3.1.1",
     "@types/command-line-args": "^5.2.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.13",
