Apply "Compute" branding change.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fastly/next-compute-js",
   "version": "0.9.0",
   "license": "MIT",
-  "description": "Next.js for Fastly Compute@Edge",
+  "description": "Next.js for Fastly Compute",
   "main": "./build/src/index.js",
   "types": "./build/src/index.d.ts",
   "bin": {
